--- a/app/src/main/res/layout/activity_math.xml
+++ b/app/src/main/res/layout/activity_math.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SubjectActivity"
+    tools:context=".MathActivity"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -51,8 +51,6 @@
         android:layout_height="60dp"
         android:layout_marginTop="6dp"
         android:text="answer4" />
-
-
 
 
 </LinearLayout>
