--- a/app/src/main/res/layout/activity_rus.xml
+++ b/app/src/main/res/layout/activity_rus.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RusActivity"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".RusActivity">
 
     <TextView
         android:id="@+id/countLabel"
@@ -29,6 +30,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
+        android:onClick="checkAnswer"
         android:text="answer1" />
 
     <Button
@@ -36,6 +38,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="6dp"
+        android:onClick="checkAnswer"
         android:text="answer2" />
 
     <Button
@@ -43,6 +46,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="6dp"
+        android:onClick="checkAnswer"
         android:text="answer3" />
 
     <Button
@@ -50,9 +54,8 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="6dp"
+        android:onClick="checkAnswer"
         android:text="answer4" />
-
-
 
 
 </LinearLayout>
