--- a/app/src/main/res/layout/activity_math.xml
+++ b/app/src/main/res/layout/activity_math.xml
@@ -29,28 +29,32 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
-        android:text="answer1" />
+        android:text="answer1"
+        android:onClick="checkAnswer"/>
 
     <Button
         android:id="@+id/answer2"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="6dp"
-        android:text="answer2" />
+        android:text="answer2"
+        android:onClick="checkAnswer"/>
 
     <Button
         android:id="@+id/answer3"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="6dp"
-        android:text="answer3" />
+        android:text="answer3"
+        android:onClick="checkAnswer"/>
 
     <Button
         android:id="@+id/answer4"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="6dp"
-        android:text="answer4" />
+        android:text="answer4"
+        android:onClick="checkAnswer"/>
 
 
 </LinearLayout>
