--- a/app/src/main/res/layout/activity_result_for_history.xml
+++ b/app/src/main/res/layout/activity_result_for_history.xml
@@ -7,7 +7,7 @@
     tools:context=".ActivityResultForRus">
 
     <TextView
-        android:id="@+id/textGetRus"
+        android:id="@+id/textGetHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
@@ -20,16 +20,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnGoRus"
+        android:id="@+id/btnGoHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="157dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="161dp"
         android:text="Далее"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textGetRus" />
+        app:layout_constraintTop_toBottomOf="@+id/textGetHistory" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
